# g2

./: .travis.yml
TinyG2/: CMakeLists.txt  m3-semihosting.ld  main.cpp  run_gdb.sh  run_qemu.sh
TinyG2/platform/: atmel_sam.mk
Tools/: ARMToolchain.cmake
